--- a/modern-resume-theme-gh-pages/_config.yml
+++ b/modern-resume-theme-gh-pages/_config.yml
@@ -1,11 +1,6 @@
 # Site
-<<<<<<< HEAD
-repository: Jetgc/chao_guo.github.io/tree/master/modern-resume-theme
+repository: sproogen/resume-theme
 favicon: images/favicon.ico
-=======
-repository: Jetgc/chao_guo.github.io/tree/master/modern-resume-theme
-# favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
->>>>>>> 74f0dad29c8c718c511f22028cc7686988e14a4a
 
 # Personal info
 name: Brett Harris
