--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Chao Guo
+title: Chāo Guō
 SEOTitle: GC的网站 | CG
 header-img: img/post-bg-desk.jpg
 email: ciu.gwok[a]gmail.com
